--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1 class="headline">Инструкция пользования персональным компьютером</h1>
+    <h1 class="headline">Инструкция пользования персональным компьютером</h1>
 </body>
 </html>
